* Mon Aug 28 2023 Steven Pritchard <steve@sicura.us> - 0.11.0
- Add support for Puppet 8, Ruby 3, and stdlib 9

* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.10.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.0
- Add RockyLinux 8 support

* Tue Sep 28 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.8.0
- BREAKING CHANGES:
  - Added 'globals' and 'environments' root directories for global and
    Puppet-environment keys, respectively, in the normalized key paths
    in the backend.
    - This change makes the top-level organization of keys in the backend
      explicit, and thus more understandable.
    - The prefix used for global keys was changed from `<keystore root dir>` to
      `<keystore root dir>/globals`.
    - The prefix used for environment keys was changed from
      `<keystore root dir>/<specific Puppet environment>` to
      `<keystore root dir>/environments/<specific Puppet environment>`.
    - Change required for the LDAP plugin.
  - Replaced the confusing 'environment' backend option in each simpkv Puppet
    function with a 'global' Boolean option.
    - Global keys are now specified by setting 'global' to true in lieu of
      setting 'environment' to ''.
  - Changed the key and folder name specification to restrict letter
    characters to lowercase.
    - Change required for the LDAP plugin.
  - Changed the plugin configuration API
    - Configuration has been split out into its own method, instead of being
      done in the plugin constructor.
    - This minimal change simplifies unit testing of configuration of complex
      plugins.
  - Fixed the mechanism a plugin uses to advertise its type.
    - Plugin type is now determined from its filename.
    - Previous mechanism did not work when when multiple plugins were used.
- Added
  - LDAP plugin
    - Acceptance test that demonstrates its use and integration with
      a 389-DS instance configured with the SIMP data schema