@@ -1,3 +1,11 @@
+* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 0.12.0
+- [puppetsync] Updates for Puppet 8
+  - These updates may include the following:
+    - Update Gemfile
+    - Add support for Puppet 8
+    - Drop support for Puppet 6
+    - Update module dependencies
+
 * Mon Aug 28 2023 Steven Pritchard <steve@sicura.us> - 0.11.0
 - Add support for Puppet 8, Ruby 3, and stdlib 9
 
